added transition between person cards

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
 
             <!-- КАРТА СОТРУДНИКА №1 -->
 
+            <input type="radio" id="person1" name="person">
             <div class="card__person card__person__1">
               <!-- ЗАГЛАВНОЕ ФОТО СОТРУДНИКА -->
               <div class="title__img__person title__img__person__1">
@@ -164,27 +165,35 @@
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
                 <div class="wrap__team">
-                  <div class="team__person team__person__img__1">
-                    <!-- ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ -->
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Brenda Turner</span>
+                  <label for="person2">
+                    <div class="team__person team__person__img__1">
+                      <!-- ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ -->
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Brenda Turner</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__2">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Carolyn Jackson</span>
+                  </label>
+                  <label for="person3">
+                    <div class="team__person team__person__img__2">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Carolyn Jackson</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__3">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Christopher Phillips</span>
+                  </label>
+                  <label for="person4">
+                    <div class="team__person team__person__img__3">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Christopher Phillips</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__4">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Peter Collins</span>
+                  </label>
+                  <label for="person5">
+                    <div class="team__person team__person__img__4">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Peter Collins</span>
+                      </div>
                     </div>
-                  </div>
+                  </label>
                 </div>
               </div>
             </div>
@@ -193,6 +202,7 @@
 
             <!-- КАРТА СОТРУДНИКА 2  -->
 
+            <input type="radio" id="person2" name="person">
             <div class="card__person card__person__2">
               <div class="title__img__person title__img__person__1__card__2">
                 <!-- ВСПЛЫВАЮЩИЙ БЛОК ИМЯ СОТРУДНИКА -->
@@ -216,27 +226,35 @@
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
                 <div class="wrap__team">
-                  <div class="team__person team__person__img__1__card__2">
-                    <!-- ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ -->
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Arthur Foster</span>
+                  <label for="person1">
+                    <div class="team__person team__person__img__1__card__2">
+                      <!-- ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ -->
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Arthur Foster</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__2__card__2">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Carolyn Jackson</span>
+                  </label>
+                  <label for="person3">
+                    <div class="team__person team__person__img__2__card__2">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Carolyn Jackson</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__3__card__2">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Christopher Phillips</span>
+                  </label>
+                  <label for="person4">
+                    <div class="team__person team__person__img__3__card__2">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Christopher Phillips</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__4__card__2">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Peter Collins</span>
+                  </label>
+                  <label for="person5">
+                    <div class="team__person team__person__img__4__card__2">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Peter Collins</span>
+                      </div>
                     </div>
-                  </div>
+                  </label>
                 </div>
               </div>
             </div>
@@ -245,6 +263,7 @@
 
             <!-- КАРТА СОТРУДНИКА 3 -->
 
+            <input type="radio" id="person3" name="person">
             <div class="card__person card__person__3">
               <div class="title__img__person title__img__person__1__card__3">
                 <!-- ВСПЛЫВАЮЩИЙ БЛОК ИМЯ СОТРУДНИКА -->
@@ -268,27 +287,35 @@
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
                 <div class="wrap__team">
-                  <div class="team__person team__person__img__1__card__3">
-                    <!-- ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ -->
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Arthur Foster</span>
+                  <label for="person1">
+                    <div class="team__person team__person__img__1__card__3">
+                      <!-- ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ -->
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Arthur Foster</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__2__card__3">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Brenda Turner</span>
+                  </label>
+                  <label for="person2">
+                    <div class="team__person team__person__img__2__card__3">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Brenda Turner</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__3__card__3">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Christopher Phillips</span>
+                  </label>
+                  <label for="person4">
+                    <div class="team__person team__person__img__3__card__3">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Christopher Phillips</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__4__card__3">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Peter Collins</span>
+                  </label>
+                  <label for="person5">
+                    <div class="team__person team__person__img__4__card__3">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Peter Collins</span>
+                      </div>
                     </div>
-                  </div>
+                  </label>
                 </div>
               </div>
             </div>
@@ -297,6 +324,7 @@
 
             <!-- КАРТА СОТРУДНИКА 4 -->
 
+            <input type="radio" id="person4" name="person">
             <div class="card__person card__person__4">
               <div class="title__img__person title__img__person__1__card__4">
                 <!-- ВСПЛЫВАЮЩИЙ БЛОК ИМЯ СОТРУДНИКА -->
@@ -320,27 +348,35 @@
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
                 <div class="wrap__team">
-                  <div class="team__person team__person__img__1__card__4">
-                    <!-- ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ -->
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Arthur Foster</span>
+                  <label for="person1">
+                    <div class="team__person team__person__img__1__card__4">
+                      <!-- ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ -->
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Arthur Foster</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__2__card__4">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Brenda Turner</span>
+                  </label>
+                  <label for="person2">
+                    <div class="team__person team__person__img__2__card__4">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Brenda Turner</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__3__card__4">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Carolyn Jackson</span>
+                  </label>
+                  <label for="person3">
+                    <div class="team__person team__person__img__3__card__4">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Carolyn Jackson</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__4__card__4">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Peter Collins</span>
+                  </label>
+                  <label for="person5">
+                    <div class="team__person team__person__img__4__card__4">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Peter Collins</span>
+                      </div>
                     </div>
-                  </div>
+                  </label>
                 </div>
               </div>
             </div>
@@ -349,6 +385,7 @@
 
             <!-- КАРТА СОТРУДНИКА 5 -->
 
+            <input type="radio" id="person5" name="person">
             <div class="card__person card__person__5">
               <div class="title__img__person title__img__person__1__card__5">
                 <!-- ВСПЛЫВАЮЩИЙ БЛОК ИМЯ СОТРУДНИКА -->
@@ -372,27 +409,35 @@
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
                 <div class="wrap__team">
-                  <div class="team__person team__person__img__1__card__5">
-                    <!-- ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ -->
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Arthur Foster</span>
+                  <label for="person1">
+                    <div class="team__person team__person__img__1__card__5">
+                      <!-- ВСПЛЫВАЮЩИЕ ИМЯ СОТРУДНИКА КОМАНДЫ -->
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Arthur Foster</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__2__card__5">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Brenda Turner</span>
+                  </label>
+                  <label for="person2">
+                    <div class="team__person team__person__img__2__card__5">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Brenda Turner</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__3__card__5">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Carolyn Jackson</span>
+                  </label>
+                  <label for="person3">
+                    <div class="team__person team__person__img__3__card__5">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Carolyn Jackson</span>
+                      </div>
                     </div>
-                  </div>
-                  <div class="team__person team__person__img__4__card__5">
-                    <div class="wrap__team__person__name">
-                      <span class="team__person__name">Christopher Phillips</span>
+                  </label>
+                  <label for="person4">
+                    <div class="team__person team__person__img__4__card__5">
+                      <div class="wrap__team__person__name">
+                        <span class="team__person__name">Christopher Phillips</span>
+                      </div>
                     </div>
-                  </div>
+                  </label>
                 </div>
               </div>
             </div>
