added style form 2

--- a/index.html
+++ b/index.html
@@ -471,7 +471,7 @@
       <section class="wrap__form__2">
         <div class="wrap__content__form__2">
           <h2 class="title title__h2">get in touch</h2>
-          <p>
+          <p class="p-form__2">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis quidem pariatur alias nesciunt excepturi illum laborum hic repellat cumque iste!
           </p>
           <hr class="line__red">
@@ -481,7 +481,7 @@
                 <input class="form__2 form__2__size">
                 <input class="form__2 form__2__size">
               </div>
-              <textarea name="" id="" cols="30" rows="10" class="form__2"></textarea>
+              <textarea name="" id="" cols="90" rows="10" class="form__2"></textarea>
               <input class="button__content form__2__button__size" type="submit" value="SEND MESSAGE">
             </form>
             <div class="block__contact__info">
