finished block footer and added links anchor in nav menu

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
           <nav class="menu">
             <ul>
               <li class="nav__1__active"><a href="#">home</a></li>
-              <li class="nav__1__active"><a href="#">portfolio</a></li>
-              <li class="nav__1__active"><a href="#">about us</a></li>
-              <li class="nav__1__active"><a href="#">contact</a></li>
+              <li class="nav__1__active"><a href="#portfolio">portfolio</a></li>
+              <li class="nav__1__active"><a href="#about_us">about us</a></li>
+              <li class="nav__1__active"><a href="#contact">contact</a></li>
             </ul>
           </nav>
         </header>
@@ -31,14 +31,14 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ipsam laudantium ipsum, blanditiis nemo necessitatibus nihil eveniet distinctio sed error voluptatem quidem sit obcaecati nisi minima voluptate.
             </p>
-            <form action="#">
+            <form action="">
               <button class="button__content">contact us</button>
             </form>
           </div>
           <div class="block__video">
             <div class="video__wrapper">
               <div class="video__play__button"></div>
-              <video src="#" poster="./image/1.jpg" ></video>
+              <video src="" poster="./image/1.jpg" ></video>
             </div>
           </div>
         </div>
@@ -55,7 +55,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ipsam laudantium ipsum, blanditiis nemo necessitatibus nihil eveniet distinctio sed error voluptatem quidem sit obcaecati nisi minima voluptate.
             </p>
-            <form action="#">
+            <form action="">
               <button class="button__content">contact us</button>
             </form>
           </div>
@@ -90,7 +90,7 @@
       <section class="main__section">
         <div class="content__wrap__2">
           <!-- ЗАГОЛОВОК FEATURE PRODUCTS -->
-          <div class="block__2__title">
+          <div class="block__2__title"  id="portfolio">
             <div class="block__2__title__wrap">
               <h2 class="title title_h2">feature products</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore ullam sint at quaerat omnis recusandae.</p>
@@ -102,11 +102,11 @@
           <div class="block__2__nav">
             <nav class="menu">
               <ul>
-                <li><a class="block__2__nav__color" href="#">all</a></li>
-                <li><a class="block__2__nav__color" href="#">print template</a></li>
-                <li><a class="block__2__nav__color" href="#">web template</a></li>
-                <li><a class="block__2__nav__color" href="#">user interface</a></li>
-                <li><a class="block__2__nav__color" href="#">mosc-up</a></li> 
+                <li><a class="block__2__nav__color" href="">all</a></li>
+                <li><a class="block__2__nav__color" href="">print template</a></li>
+                <li><a class="block__2__nav__color" href="">web template</a></li>
+                <li><a class="block__2__nav__color" href="">user interface</a></li>
+                <li><a class="block__2__nav__color" href="">mosc-up</a></li> 
               </ul>
             </nav>
           </div>
@@ -124,7 +124,7 @@
         </div>
       </section>
       <!-- БЛОК 3 MEET OUR TEAM -->
-      <section class="main__section">
+      <section class="main__section" id="about_us">
         <div class="content__wrap__3">
           <!-- БЛОК 3 ЗАГОЛОВОК -->
           <div class="block__3__title">
@@ -468,7 +468,7 @@
         </div>
       </section>
       <!-- ФОРМА 2 -->
-      <section class="wrap__form__2">
+      <section class="wrap__form__2" id="contact">
         <div class="wrap__content__form__2">
           <h2 class="title title__h2">get in touch</h2>
           <p class="p-form__2">
@@ -478,14 +478,14 @@
           <div class="wrap__block__form__2">
             <form class="wrap__element__form__2" action="">
               <div class="form__2__line__1">
-                <input class="form__2 form__2__size">
-                <input class="form__2 form__2__size">
+                <input class="form__2 form__2__size" placeholder="Name">
+                <input class="form__2 form__2__size" placeholder="Your Mail">
               </div>
-              <textarea name="" id="" cols="90" rows="10" class="form__2"></textarea>
+              <textarea name="" id="" cols="100" rows="10" class="form__2" placeholder="Type your message"></textarea>
               <input class="button__content form__2__button__size" type="submit" value="SEND MESSAGE">
             </form>
             <div class="block__contact__info">
-              <h6 class="contact__info__title">Contact info</h6>
+              <h6 class="contact__info__title">contact info</h6>
               <span class="contact__info__address">Jalalabad 24/A, Ambaarkhana, Sylhet,<br>Bangladesh</span>
               <a class="contact__info__mail" href="">redwan@deviserweb.com</a>
               <a class="contact__info__phone" href="">(+88)017 617 46373</a>
@@ -495,10 +495,32 @@
           </div>
           
         </div>
-        <div class="block__contact__info__background"></div>
         
       </section>
       <div class="footer__bottom">
+        <span class="footer__bottom__text">&copy; Copyright @junaed 2016, All rights reserved.</span>
+        <ul>
+          <li>
+            <a class="footer__bottom__www" href="https://twitter.com/">
+              <img class="footer__bottom__img" src="./image/social_media/t.png" alt="twitter">
+            </a>
+          </li>
+          <li>
+            <a class="footer__bottom__www" href="https://www.linkedin.com/">
+              <img class="footer__bottom__img" src="./image/social_media/l.png" alt="linkedin">
+            </a>
+          </li>
+          <li>
+            <a class="footer__bottom__www" href="https://myaccount.google.com/">
+              <img class="footer__bottom__img" src="./image/social_media/g.png" alt="google+">
+            </a>
+          </li>
+          <li>
+            <a class="footer__bottom__www" href="https://www.facebook.com/">
+              <img class="footer__bottom__img" src="./image/social_media/f.png" alt="facebook">
+            </a>
+          </li>
+        </ul>
 
       </div>
 
