--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <title>Agency</title>
 </head>
 <body>
+  <!-- ЗАГРУЗОЧНЫЙ ЭКРАН -->
+  <div class="preloader">
+    <div class="loader"></div>
+  </div>
   <!-- ОБОЛОЧКА -->
   <div class="wrapper">
 
@@ -38,8 +42,9 @@
           </div>
           <div class="block__video">
             <div class="video__wrapper">
+              <!-- КНОПКА НА ВИДЕО -->
               <div class="video__play__button">
-                
+
               </div>
               <video src="" poster="./image/1.jpg" ></video>
             </div>
