added play button and scrolbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="loader"></div>
   </div>
   <!-- ОБОЛОЧКА -->
-  <div class="wrapper">
+  <div class="wrapper" id="scroll">
 
     <!-- ЗАГЛАВНЫЙ БЛОК -->
     <section class="fullscreen">
@@ -44,7 +44,8 @@
             <div class="video__wrapper">
               <!-- КНОПКА НА ВИДЕО -->
               <div class="video__play__button">
-
+                <div class="play__button">
+                </div>
               </div>
               <video src="" poster="./image/1.jpg" ></video>
             </div>
