fixed bug scrollbar

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="loader"></div>
   </div>
   <!-- ОБОЛОЧКА -->
-  <div class="wrapper" id="scroll">
+  <div class="wrapper">
 
     <!-- ЗАГЛАВНЫЙ БЛОК -->
     <section class="fullscreen">
