added @media max-width: 1199px and min-width: 800px

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./background-images.css">
+  <link rel="stylesheet" href="./@media.css">
   <link rel="shortcut icon" href="./icons/favicon.png" type="image/png">
   <title>Agency</title>
 </head>
@@ -64,7 +65,7 @@
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ipsam laudantium ipsum, blanditiis nemo necessitatibus nihil eveniet distinctio sed error voluptatem quidem sit obcaecati nisi minima voluptate.
             </p>
-            <form action="">
+            <form>
               <button class="button__content">contact us</button>
             </form>
           </div>
