added @media min-width 800px and @media mobile nav

--- a/index.html
+++ b/index.html
@@ -22,12 +22,26 @@
     <section class="fullscreen">
       <div class="fullscreen__body">
         <header class="nav" id="top">
-          <nav class="menu">
-            <ul>
-              <li class="nav__1__active"><a href="#">home</a></li>
-              <li class="nav__1__active"><a href="#portfolio">portfolio</a></li>
-              <li class="nav__1__active"><a href="#about_us">about us</a></li>
-              <li class="nav__1__active"><a href="#contact">contact</a></li>
+          <input type="checkbox" id="nav__mobile">
+          <div class="nav__1__mobile">
+            <a class="nav__1__mobile__list" href="#">home</a>
+            <a class="nav__1__mobile__list" href="#portfolio">portfolio</a>
+            <a class="nav__1__mobile__list" href="#about_us">about us</a>
+            <a class="nav__1__mobile__list" href="#contact">contact</a>
+          </div>
+          <label for="nav__mobile">
+            <div class="nav__1__mobile__button">
+              <hr class="line__button__nav__1">
+              <hr class="line__button__nav__1">
+              <hr class="line__button__nav__1">
+            </div>
+          </label>
+          <nav class="menu menu__1">
+            <ul class="nav__1">
+              <li class="nav__1__active nav__1__active__title"><a href="#">home</a></li>
+              <li class="nav__1__active nav__1__active__title"><a href="#portfolio">portfolio</a></li>
+              <li class="nav__1__active nav__1__active__title"><a href="#about_us">about us</a></li>
+              <li class="nav__1__active nav__1__active__title"><a href="#contact">contact</a></li>
             </ul>
           </nav>
         </header>
@@ -111,12 +125,12 @@
           <!-- НАВИГАЦИЯ 2 -->
           <div class="block__2__nav">
             <nav class="menu">
-              <ul>
-                <li><a class="block__2__nav__color" href="">all</a></li>
-                <li><a class="block__2__nav__color" href="">print template</a></li>
-                <li><a class="block__2__nav__color" href="">web template</a></li>
-                <li><a class="block__2__nav__color" href="">user interface</a></li>
-                <li><a class="block__2__nav__color" href="">mosc-up</a></li> 
+              <ul class="nav__1">
+                <li class="nav__1__active"><a class="block__2__nav__color" href="">all</a></li>
+                <li class="nav__1__active"><a class="block__2__nav__color" href="">print template</a></li>
+                <li class="nav__1__active"><a class="block__2__nav__color" href="">web template</a></li>
+                <li class="nav__1__active"><a class="block__2__nav__color" href="">user interface</a></li>
+                <li class="nav__1__active"><a class="block__2__nav__color" href="">mosc-up</a></li> 
               </ul>
             </nav>
           </div>
@@ -166,11 +180,11 @@
                   <h3 class="info__person__name">Arthur Foster</h3>
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla nobis voluptatibus possimus blanditiis nam animi!</p>
                   <!-- НАВИГАЦИЯ ПО СОЦИАЛЬНЫМ СЕТЯМ  -->
-                    <ul>
-                      <li class="nav__social__media"><a class="social__media" href="">facebook</a></li>
-                      <li class="nav__social__media"><a class="social__media" href="">dribble</a></li>
-                      <li class="nav__social__media"><a class="social__media" href="">behance</a></li>
-                      <li class="nav__social__media"><a class="social__media"href="">twitter</a></li>
+                    <ul class="nav__1">
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">dribble</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">behance</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media"href="">twitter</a></li>
                     </ul>
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
@@ -227,11 +241,11 @@
                   <h3 class="info__person__name">Brenda Turner</h3>
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla nobis voluptatibus possimus blanditiis nam animi!</p>
                   <!-- НАВИГАЦИЯ ПО СОЦИАЛЬНЫМ СЕТЯМ  -->
-                    <ul>
-                      <li class="nav__social__media"><a class="social__media" href="">facebook</a></li>
-                      <li class="nav__social__media"><a class="social__media" href="">dribble</a></li>
-                      <li class="nav__social__media"><a class="social__media" href="">behance</a></li>
-                      <li class="nav__social__media"><a class="social__media"href="">twitter</a></li>
+                    <ul class="nav__1">
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">dribble</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">behance</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media"href="">twitter</a></li>
                     </ul>
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
@@ -288,11 +302,11 @@
                   <h3 class="info__person__name">Carolyn Jackson</h3>
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla nobis voluptatibus possimus blanditiis nam animi!</p>
                   <!-- НАВИГАЦИЯ ПО СОЦИАЛЬНЫМ СЕТЯМ  -->
-                    <ul>
-                      <li class="nav__social__media"><a class="social__media" href="">facebook</a></li>
-                      <li class="nav__social__media"><a class="social__media" href="">dribble</a></li>
-                      <li class="nav__social__media"><a class="social__media" href="">behance</a></li>
-                      <li class="nav__social__media"><a class="social__media"href="">twitter</a></li>
+                    <ul class="nav__1">
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">dribble</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">behance</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media"href="">twitter</a></li>
                     </ul>
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
@@ -349,11 +363,11 @@
                   <h3 class="info__person__name">Christopher Phillips</h3>
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla nobis voluptatibus possimus blanditiis nam animi!</p>
                   <!-- НАВИГАЦИЯ ПО СОЦИАЛЬНЫМ СЕТЯМ  -->
-                    <ul>
-                      <li class="nav__social__media"><a class="social__media" href="">facebook</a></li>
-                      <li class="nav__social__media"><a class="social__media" href="">dribble</a></li>
-                      <li class="nav__social__media"><a class="social__media" href="">behance</a></li>
-                      <li class="nav__social__media"><a class="social__media"href="">twitter</a></li>
+                    <ul class="nav__1">
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">dribble</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">behance</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media"href="">twitter</a></li>
                     </ul>
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
@@ -410,11 +424,11 @@
                   <h3 class="info__person__name">Peter Collins</h3>
                   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla nobis voluptatibus possimus blanditiis nam animi!</p>
                   <!-- НАВИГАЦИЯ ПО СОЦИАЛЬНЫМ СЕТЯМ  -->
-                    <ul>
-                      <li class="nav__social__media"><a class="social__media" href="">facebook</a></li>
-                      <li class="nav__social__media"><a class="social__media" href="">dribble</a></li>
-                      <li class="nav__social__media"><a class="social__media" href="">behance</a></li>
-                      <li class="nav__social__media"><a class="social__media"href="">twitter</a></li>
+                    <ul class="nav__1">
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">dribble</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media" href="">behance</a></li>
+                      <li class="nav__1__active nav__social__media"><a class="social__media"href="">twitter</a></li>
                     </ul>
                 </div>
                 <!-- БЛОК КАРТОЧКИ КОМАНДЫ -->
@@ -509,23 +523,23 @@
       </section>
       <div class="footer__bottom" id="bottom">
         <span class="footer__bottom__text">&copy; Copyright @junaed 2016, All rights reserved.</span>
-        <ul>
-          <li>
+        <ul class="nav__1">
+          <li class="nav__1__active">
             <a class="footer__bottom__www" href="https://twitter.com/">
               <img class="footer__bottom__img" src="./image/social_media/t.png" alt="twitter">
             </a>
           </li>
-          <li>
+          <li class="nav__1__active">
             <a class="footer__bottom__www" href="https://www.linkedin.com/">
               <img class="footer__bottom__img" src="./image/social_media/l.png" alt="linkedin">
             </a>
           </li>
-          <li>
+          <li class="nav__1__active">
             <a class="footer__bottom__www" href="https://myaccount.google.com/">
               <img class="footer__bottom__img" src="./image/social_media/g.png" alt="google+">
             </a>
           </li>
-          <li>
+          <li class="nav__1__active">
             <a class="footer__bottom__www" href="https://www.facebook.com/">
               <img class="footer__bottom__img" src="./image/social_media/f.png" alt="facebook">
             </a>
