--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
           <div class="block__2__nav">
             <nav class="menu">
               <ul class="nav__1">
-                <li class="nav__1__active"><a class="block__2__nav__color" href="">all</a></li>
-                <li class="nav__1__active"><a class="block__2__nav__color" href="">print template</a></li>
-                <li class="nav__1__active"><a class="block__2__nav__color" href="">web template</a></li>
-                <li class="nav__1__active"><a class="block__2__nav__color" href="">user interface</a></li>
-                <li class="nav__1__active"><a class="block__2__nav__color" href="">mosc-up</a></li> 
+                <li class="nav__1__active nav__1__active__mobile"><a class="block__2__nav__color" href="">all</a></li>
+                <li class="nav__1__active nav__1__active__mobile"><a class="block__2__nav__color" href="">print template</a></li>
+                <li class="nav__1__active nav__1__active__mobile "><a class="block__2__nav__color" href="">web template</a></li>
+                <li class="nav__1__active nav__1__active__mobile"><a class="block__2__nav__color" href="">user interface</a></li>
+                <li class="nav__1__active nav__1__active__mobile"><a class="block__2__nav__color" href="">mosc-up</a></li> 
               </ul>
             </nav>
           </div>
@@ -178,7 +178,7 @@
                 <!-- ИНФОРМАЦИЯ ВЫБРАННОГО СОТРУДНИКА -->
                 <div class="info__person">
                   <h3 class="info__person__name">Arthur Foster</h3>
-                  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla nobis voluptatibus possimus blanditiis nam animi!</p>
+                  <p class="mobile__size">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nulla nobis voluptatibus possimus blanditiis nam animi!</p>
                   <!-- НАВИГАЦИЯ ПО СОЦИАЛЬНЫМ СЕТЯМ  -->
                     <ul class="nav__1">
                       <li class="nav__1__active nav__social__media"><a class="social__media" href="">facebook</a></li>
