--- a/index.html
+++ b/index.html
@@ -2,12 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="description" content="Web page Agency">
+  <meta name="keywords" content="Agency, Management, UI/UX Design, Logo, Branding, Animation, Arthur Foster, Brenda Turner, Carolyn Jackson, Christopher Phillips, Peter Collins">
+  <meta name="author" content="Degtiar Aleksei">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="./background-images.css">
   <link rel="stylesheet" href="./@media.css">
   <link rel="shortcut icon" href="./icons/favicon.png" type="image/png">
+  <link rel="apple-touch-icon" href="./icons/favicon.png">
   <title>Agency</title>
 </head>
 <body>
