fixed bug in main section 1, name button

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit. Cumque ipsam laudantium ipsum, blanditiis nemo necessitatibus nihil eveniet distinctio sed error voluptatem quidem sit obcaecati nisi minima voluptate.
             </p>
             <form>
-              <button class="button__content">contact us</button>
+              <button class="button__content">learn more</button>
             </form>
           </div>
           <!-- ПРАВЫЙ БЛОК -->
